--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Splash">
+        <activity android:name=".Activity.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Display" />
-        <activity android:name=".Login" />
-        <activity android:name=".Registration" />
-        <activity android:name=".Dashboard"></activity>
+        <activity android:name=".Activity.Display" />
+        <activity android:name=".Activity.Login" />
+        <activity android:name=".Activity.Dashboard" />
+        <activity android:name=".Activity.Registration" />
+        <activity android:name=".Activity.ProductActivity"></activity>
     </application>
 
 </manifest>
